# robot_modelling

./: .gitignore  README.md
bean2_moveit/: .setup_assistant  CMakeLists.txt  package.xml
bean2_moveit/config/: bean2.ros2_control.xacro  bean2.srdf  bean2.urdf.xacro  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ros2_controllers.yaml
bean2_moveit/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
bean3_description/: CMakeLists.txt  package.xml
bean3_description/config/: controller_position.yaml  joint_names_bean2.yaml
bean3_description/launch/: .bean3_gz.launch.py.swp  .bean3_gz.launch.py.un~  bean3_bringup.launch.py  bean3_gz.launch.py  bean3_gz.launch.py~  bean3_rviz.launch.py
bean3_description/meshes/: base_link.STL  link_five.STL  link_four.STL  link_one.STL  link_six.STL  link_three.STL  link_two.STL
bean3_description/rviz/: bean_renamed.rviz  renamed_motion_planning.rviz  rviz_basic_settings.rviz
bean3_description/urdf/: bean2.csv  bean2.urdf
bean3_moveit/: .setup_assistant  CMakeLists.txt  package.xml
bean3_moveit/config/: bean2.ros2_control.xacro  bean2.srdf  bean2.urdf.xacro  joint_limits.yaml
bean3_moveit/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
hmi/: package.xml  setup.cfg  setup.py
hmi/hmi/: hmi.py
iss_simulation/: .CMakeLists.txt.un~  CMakeLists.txt  CMakeLists.txt~  package.xml
iss_simulation/launch/: .iss_gz_sim.launch.py.swp  .iss_gz_sim.launch.py.un~  bean3_gz_test.launch.py  iss_gz_sim.launch.py  iss_moveit_gz_sim.launch.py  iss_moveit_gz_sim_task.launch.py  load_world.launch.py  nemo1_gz_test.launch.py  robots_gz_bringup.launch.py  robots_gz_moveit_bringup.launch.py
iss_simulation/models/: static_box.sdf
iss_simulation/models/capsule/: model.sdf
iss_simulation/rviz/: rviz_motion_planning.rviz
iss_simulation/worlds/: testworld.sdf
nemo1_description/: .README.md.un~  CMakeLists.txt  README.md  package.xml
nemo1_description/config/: joint_names_nemo1.yaml
nemo1_description/launch/: nemo1_bringup.launch.py  nemo1_gz.launch.py  nemo1_rviz.launch.py
nemo1_description/meshes/: EE.STL  base_link.STL  link_1.STL  link_2.STL  link_3.STL  link_4.STL  link_5.STL  link_6.STL
nemo1_description/rviz/: nemo_renamed.rviz  renamed_motion_planning.rviz
nemo1_description/urdf/: nemo1.csv  nemo1.urdf
nemo1_moveit/: .README.md.un~  .setup_assistant  CMakeLists.txt  README.md  package.xml  package.xml.save
nemo1_moveit/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  nemo1.ros2_control.xacro  nemo1.srdf  nemo1.urdf.xacro  ros2_controllers.yaml
nemo1_moveit/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
task_coordinator/: CMakeLists.txt  package.xml
task_coordinator/include/task_coordinator/: arm_setup.hpp
task_coordinator/scripts/: bringup.sh  run_sim_task.sh  sample_workspace.py
task_coordinator/src/: arm_setup.cpp  hmi_motion_server.cpp  sim_task.cpp
task_coordinator/srv/: JogStep.srv  SelectPose.srv
