<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nemo1_description</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="re25m012@technikum-wien.at">viaductlights</maintainer>
  <maintainer email="re25m022@technikum-wien.at">nemo</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <gazebo_ros gazebo_model_path="${prefix}/urdf"/>
    <build_type>ament_cmake</build_type>
  </export>
</package>
